--- a/_includes/carousel.html
+++ b/_includes/carousel.html
@@ -16,7 +16,7 @@
             <!-- Set background for slide in css -->
             <div
             class="header-back"
-            style="background-image: url({{ "/static/assets/img/" | prepend: site.baseurl }}{{ site.data.index.banners[0].src }});"
+            style="background-image: url({{ '/static/assets/img/' | prepend: site.baseurl }}{{ site.data.index.banners[0].src }});"
             title="{{ site.data.index.banners[0].title }}">
             </div>
         </div>
@@ -32,7 +32,7 @@
             </div>
             <!-- Set background for slide in css -->
             <div class="header-back" 
-            style="background-image: url({{ "/static/assets/img/"  | prepend: site.baseurl }}{{ banner.src }});" 
+            style="background-image: url({{ '/static/assets/img/'  | prepend: site.baseurl }}{{ banner.src }});" 
             title="{{ banner.title }}">
             </div>
         </div>
